--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 				<li>Faceback</li>
 				<li>Mes projets</li>
 				<li>Curriculum Vitae</li>
-				<li>Mon Blog</li>
+                <a hred="https://www.youtube.com/channel/UC0e3QhIYukixgh5VVpKHH9Q">
+				    <li>Mon Blog</li>
+                </a>
 			</ul>
 		</nav>
 
