--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li>Faceback</li>
 				<li>Mes projets</li>
-				<li>Curriculum Vitae</li>
+				<li><img src="https://i.ibb.co/Wf7x5qk/profile.jpg" alt="profile photo" /></li>
                 <a href="https://www.youtube.com/channel/UC0e3QhIYukixgh5VVpKHH9Q">
 				    <li>Mon Blog</li>
                 </a>
