--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 				<h1>Ben Yogurt</h1>
 			</div>
 			<ul>
-				<li>Faceback</li>
-				<li>Mes projets</li>
-				<li><img src="https://i.ibb.co/Wf7x5qk/profile.jpg" alt="profile photo" /></li>
-                <a href="https://www.youtube.com/channel/UC0e3QhIYukixgh5VVpKHH9Q">
-				    <li>Mon Blog</li>
+                <a href="https://www.linkedin.com/in/b%C3%A9renger-queune/">
+				    <li><img src="images/LinkedIn_logo_initials.png" alt="Linkedin Profile" /></li>
                 </a>
+                <a href="https://github.com/BerengerQueune">
+				    <li><img src="images/github_logo.png" alt="Github Profile" /></li>
+                </a>
+                <li>Projects</li>
+                <li>About</li>
 			</ul>
 		</nav>
 
