--- a/tableau_project.html
+++ b/tableau_project.html
@@ -30,15 +30,9 @@
 		<section class="page-content">
 
 
-			<div class="presentation-image">
-                <img src="images/background_computer.jpg" alt="AI image" />
-                    <header>
-                        <h1>Hi, I'm Bérenger</h1>
-                        <p>
-                            After 15+ years working in Customer Services I had the opportunity to reshape my career and I decided to go on the Data path.
-                        </p>
-                    </header>
-            </div>
+						<p>
+							This was my first data project. I used SQL to query data from a "Toys and models" database to realize a dashboard with Tableau software.
+						</p>
 
 			<section class="projects-section">
                 <p id="my_projects"></p>
@@ -102,9 +96,6 @@
                 </div>
 			</section>
 		</section>
-
-        <script src="YOUR_FILE.js"></script>
-
 
 		<footer>
 			<div class="colonne">
