--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
 		<title>
-			Créer un Portfolio Moderne en HTML & CSS et le mettre en Ligne
+			Mon portfolio
 		</title>
 	</head>
 	<body>
