--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
 		<title>
-			Créer un Portfolio Moderne en HTML & CSS et le mettre en Ligne
+			Mon portfolio
 		</title>
 	</head>
 	<body>
@@ -102,8 +102,7 @@
                 </div>
 			</section>
 		</section>
-
-        <script src="YOUR_FILE.js"></script>
+      <script src="YOUR_FILE.js"></script>
 
 
 		<footer>
