--- a/30-01-2022.html
+++ b/30-01-2022.html
@@ -14,11 +14,16 @@
 	</head>
 
 
-
-
-
-
 	<body>
+
+		
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+
+	
 		<nav>
 			<div class="profile">
 				<img src="images/image_profile.jpeg" alt="profile photo" />
@@ -37,15 +42,26 @@
 			</ul>
 		</nav>
 
-		<div class="presentation">
-			<header>
-				<h1>Welcome</h1>
-				<img src="images/image_profile.jpeg" alt="profile photo" />
-				<p>
-					After 15+ years working in Customer Services I had the opportunity to reshape my career and I decided to go on the Data path.
-				</p>
-			</header>
-	</div>
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+
+
+
+		<section class="page-content">
+
+
+			<div class="presentation-image">
+                <img src="images/background_computer.jpg" alt="AI image" />
+                    <header>
+                        <h1>Hi, I'm Bérenger</h1>
+                        <p>
+                            After 15+ years working in Customer Services I had the opportunity to reshape my career and I decided to go on the Data path.
+                        </p>
+                    </header>
+            </div>
 
 
 
@@ -116,6 +132,8 @@
 
 
                 <h2>Jedha Bootcamp: 5 months Data Engineer training</h2>
+
+
                 <div class="project">
                     <h4>Wait and see
                         <p class="dates">February 2022 to July 2022</p>
@@ -126,6 +144,10 @@
                             <img src="images/Jedha_logo.png" alt="Tableau Project" />
                         </a>
                 </div>
+
+
+
+                
                 
 			</section>
 		</section>
