--- a/index.html
+++ b/index.html
@@ -12,39 +12,66 @@
 			Mon portfolio
 		</title>
 	</head>
-	<body>
-		<nav>
-			<div class="profile">
-				<img src="images/image_profile.jpeg" alt="profile photo" />
-				<h1><a href="index.html">Bérenger Queune</a></h1>
-			</div>
-			<ul>
-                <a href="https://www.linkedin.com/in/b%C3%A9renger-queune/">
-				    <li><img src="images/LinkedIn_logo_initials.png" alt="Linkedin Profile" /></li>
-                </a>
-                <a href="https://github.com/BerengerQueune">
-				    <li><img src="images/github_logo.png" alt="Github Profile" /></li>
-                </a>
-                <li>Resume</li>
-                <li><a href="#my_projects">Projects</a></li>
-                <li><a href="about.html" title="About Me">About Me</a></li>
-			</ul>
-		</nav>
+
+
+<body>
+
+		
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+
+	
+    <nav>
+        <div class="profile">
+            <h1><a href="index.html">Home</a></h1>
+        </div>
+        <ul>
+            <a href="https://www.linkedin.com/in/b%C3%A9renger-queune/">
+                <li><img src="images/LinkedIn_logo_initials.png" alt="Linkedin Profile" /></li>
+            </a>
+            <a href="https://github.com/BerengerQueune">
+                <li><img src="images/github_logo.png" alt="Github Profile" /></li>
+            </a>
+            <li>Resume</li>
+            <li><a href="#my_projects">Projects</a></li>
+            <li><a href="#about_me">About me</a></li>
+        </ul>
+    </nav>
+
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+
+
+
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
+
+<div class="presentation">
+    <p id="about_me"></p>
+	<h1>Hi, I'm Bérenger</h1>
+	<img src="images/image_profile.jpeg" alt="profile photo" />
+	<p>
+		I am a student Data Analyst currently learning 
+        at the Wild Code School.
+	</p>
+</div>
+
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
 
 		<section class="page-content">
-
-
-			<div class="presentation-image">
-                <img src="images/background_computer.jpg" alt="AI image" />
-                    <header>
-                        <h1>Hi, I'm Bérenger</h1>
-                        <p>
-                            After 15+ years working in Customer Services I had the opportunity to reshape my career and I decided to go on the Data path.
-                        </p>
-                    </header>
-            </div>
-
-
 
 
 			<section class="projects-section">
@@ -132,29 +159,4 @@
                 
 			</section>
 		</section>
-        <script src="script.js"></script>
-
-        
-
-
-		<footer>
-			<div class="colonne">
-				<h3></h3>
-				<p></p>
-				<p></p>
-				<p></p>
-			</div>
-			<div class="colonne">
-				<h3></h3>
-				<p></p>
-				<p></p>
-				<p></p>
-			</div>
-			<div class="colonne">
-				<h3></h3>
-				<p></p>
-				<p></p>
-				<p></p>
-			</div>
-		</footer>
 	</body>
