--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
         <div class="profile">
             <h1><a href="index.html">Home</a></h1>
         </div>
+
         <ul>
+            <li><a href="https://www.linkedin.com/in/b%C3%A9renger-queune/">
+                <img src="images/LinkedIn_logo_initials.png" alt="Linkedin Profile" />
+            </a></li>
+            <li><a href="https://github.com/BerengerQueune">
+                <img src="images/github_logo.png" alt="Github Profile" />
+            </a></li>
             <li><a href="#about_me">About me</a></li>
             <li><a href="#my_projects">Projects</a></li>
             <li>Resume</li>
@@ -56,21 +63,14 @@
     <div class="box">
         <img src="images/berenger.png" alt="profile photo" />
 
-        <p>
+        <p><br><br>
             I am a student Data Analyst currently learning 
             at the Wild Code School.
             <br><br>
             I will start a 5 months Data Engineer training at Jedha Bootcamp in February.
         </p>
 
-        <div class="media">
-            <a href="https://www.linkedin.com/in/b%C3%A9renger-queune/">
-                <img src="images/LinkedIn_logo_initials.png" alt="Linkedin Profile" />
-            </a>
-            <a href="https://github.com/BerengerQueune">
-                <img src="images/github_logo.png" alt="Github Profile" />
-            </a>
-        </div>
+
     </div>
 
 </div>
