--- a/index.html
+++ b/index.html
@@ -161,39 +161,41 @@
                 <p class="dates">February 2022 to July 2022</p>
 
 
-                <div class="projects">
-                <!--Card 1-->
-                <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
-                    <div class = "card_title">
-                        <h4>Future project</h4>
-                    </div>
-                    <div class = "card_description">
-                    <p>Wait and see</p>
-                    </div>
-                </div>
+				<div class="projects">
 
-                <!--Card 2-->
-                <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
-                    <div class = "card_title">
-                        <h4>Future project</h4>
-                    </div>
-                    <div class = "card_description">
-                    <p>Wait and see</p>
-                    </div>
-                </div>
+					<!--Card 1-->
+                        <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                            <div class = "card_title">
+                                <h4>Future project at Jedha Bootcamp</h4>
+                            </div>
+                            <div class = "card_description">
+                                <p>Wait and See. Wait and See. Wait and See.</p>
+                            </div>
+					</div>
 
-                <!--Card 3-->
-                <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
-                    <div class = "card_title">
-                        <h4>Future project</h4>
-                    </div>
-                    <div class = "card_description">
-                    <p>Wait and see</p>
-                    </div>
-                </div>
+                    <!--Card 2-->
+					<div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+						<div class = "card_title">
+                            <h4>Future project at Jedha Bootcamp</h4>
+                        </div>
+                        <div class = "card_description">
+                        <p>Wait and See. Wait and See. Wait and See.</p>
+                        </div>
+					</div>
 
-
-                </div>
+                    <!--Card 3-->
+                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+						<div class = "card_title">
+                            <h4>Future project at Jedha Bootcamp</h4>
+                        </div>
+                        <div class = "card_description">
+                        <p>Wait and See. Wait and See. Wait and See.</p>
+                        </div>
+					</div>
+				</div>
 			</section>
 		</section>
+
+        <footer>
+        </footer>
 	</body>
