--- a/tableau_project.html
+++ b/tableau_project.html
@@ -57,11 +57,10 @@
 <!--Presentation div-->
 <!--Presentation div-->
 
-<div class="presentation_area">
+<div class="project_area">
     <p id="about_me"></p>
-	<h1>Hi, I'm Bérenger</h1>
+	<h1>Mockup project: Dashboard on Tableau from SQL Query</h1>
     <div class="box">
-        <img src="images/berenger.png" alt="profile photo" />
 
         <p><br><br>
             I am a student Data Analyst currently learning 
@@ -94,7 +93,7 @@
 					<!--Card 1-->
                         <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
                             <div class = "card_title">
-                                <h4>Mockup project: Dashboard on Tableau from SQL Query</h4>
+                                <h4>Mockup Dashboard on Tableau</h4>
                             </div>
                             <div class = "card_description">
                                 <p>This was my first data project. I used SQL to query data from a "Toys and models" 
