--- a/tableau_project.html
+++ b/tableau_project.html
@@ -51,22 +51,22 @@
 
 
 
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
 
 <div class="project_area">
-    <p id="about_me"></p>
+
 	<h1>Mockup project: Dashboard on Tableau from SQL Query</h1>
     <div class="box">
 
         <p><br><br>
-            I am a student Data Analyst currently learning 
-            at the Wild Code School.
+            This is my very first project in Data. I did it a week after the beginning of my Data Analyst training.
+            The Wild Code School gave me access to a SQL database called "Toys and Models". I used MySQL Workbench to write <a href="https://gist.github.com/BerengerQueune/cfa7b160ea88d72179560647fe60be42">4 SQL queries</a>.
             <br><br>
-            I will start a 5 months Data Engineer training at Jedha Bootcamp in February.
+            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on Tableau Software. The dashboard is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir">here</a>.
         </p>
 
 
@@ -74,11 +74,11 @@
 
 </div>
 
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
 <p id="my_projects"></p>
 		<section class="page-content">
 
