--- a/movie_recommendation_project.html
+++ b/movie_recommendation_project.html
@@ -36,7 +36,7 @@
             <li><a href="https://github.com/BerengerQueune">
                 <img src="images/github_logo.png" alt="Github Profile" />
             </a></li>
-            <li><a href="#about_me">About me</a></li>
+            <li><a href="index.html">About me</a></li>
             <li><a href="#my_projects">Projects</a></li>
             <li>Resume</li>
             
@@ -51,37 +51,27 @@
 
 
 
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
+<!--project_area div-->
 
-<div class="presentation_area">
-    <p id="about_me"></p>
-	<h1>Hi, I'm Bérenger</h1>
+<div class="project_area">
+
+	<h1>Movie recommendation system</h1>
     <div class="box">
-        <img src="images/berenger.png" alt="profile photo" />
 
         <p><br><br>
-            I am a student Data Analyst currently learning 
-            at the Wild Code School.
+            Mockup project: as a team of 4 we had to developp a webapp for a cinema owner. His business was falling behind and our goal was to create a movie recommendation system to suggest potential future popular movies.
             <br><br>
-            I will start a 5 months Data Engineer training at Jedha Bootcamp in February.
+            We started to clean then analyze the database thenI built the app with a Python library named Streamlit. Based on the massive IMDb database I trained a KNN Machine Learning model to find movies with similar genres to the one selected. The Streamlit App is available <a href="https://share.streamlit.io/alema86/movie_recommandation/main/Streamlit/streamlit_appVersion_finale.py">here</a>.
         </p>
 
 
     </div>
 
 </div>
-
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-
-
 
 <!--Project area div-->
 <!--Project area div-->
