--- a/tableau_project.html
+++ b/tableau_project.html
@@ -36,7 +36,7 @@
             <li><a href="https://github.com/BerengerQueune">
                 <img src="images/github_logo.png" alt="Github Profile" />
             </a></li>
-            <li><a href="#about_me">About me</a></li>
+            <li><a href="index.html">About me</a></li>
             <li><a href="#my_projects">Projects</a></li>
             <li>Resume</li>
             
@@ -74,11 +74,11 @@
 
 </div>
 
-<!--project_area div-->
-<!--project_area div-->
-<!--project_area div-->
-<!--project_area div-->
-<!--project_area div-->
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
 <p id="my_projects"></p>
 		<section class="page-content">
 
@@ -93,7 +93,7 @@
 					<!--Card 1-->
                         <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
                             <div class = "card_title">
-                                <h4>Mockup Dashboard on Tableau</h4>
+                                <h4>Mockup project: Dashboard on Tableau from SQL Query</h4>
                             </div>
                             <div class = "card_description">
                                 <p>This was my first data project. I used SQL to query data from a "Toys and models" 
@@ -102,7 +102,7 @@
 					</div>
 
                     <!--Card 2-->
-					<div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+					<div class = "project" onclick="window.open('movie_recommendation_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Movie recommendation system</h4>
                         </div>
@@ -177,7 +177,11 @@
 				</div>
 			</section>
 		</section>
-
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
 
 
         <footer>
