--- a/tableau_project.html
+++ b/tableau_project.html
@@ -66,7 +66,7 @@
             This is my very first project in Data. I did it a week after the beginning of my Data Analyst training.
             The Wild Code School gave me access to a SQL database called "Toys and Models". I used MySQL Workbench to write <a href="https://gist.github.com/BerengerQueune/cfa7b160ea88d72179560647fe60be42">4 SQL queries</a>.
             <br><br>
-            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on Tableau Software. The dashboard is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir">here</a>.
+            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on Tableau Software. The dashboard is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir">here</a>. The excentric art style was part of our story telling.
         </p>
 
 
