--- a/movie_recommendation_project.html
+++ b/movie_recommendation_project.html
@@ -9,7 +9,7 @@
         
 
 		<title>
-			Mon portfolio
+			Bérenger - Data Analyst
 		</title>
 	</head>
 
@@ -63,9 +63,9 @@
     <div class="box">
 
         <p><br><br>
-            Mockup project: as a team of 4 we had to developp a webapp for a cinema owner. His business was falling behind and our goal was to create a movie recommendation system to suggest potential future popular movies.
+            Mockup project: as a team of 4 we had to developp a <span class="highlightme">webapp</span> for a cinema owner. His business was falling behind and our goal was to create a movie recommendation system to suggest potential future popular movies.
             <br><br>
-            We started to clean then analyze the database thenI built the app with a Python library named Streamlit. Based on the massive IMDb database I trained a KNN Machine Learning model to find movies with similar genres to the one selected. The Streamlit App is available <a href="https://share.streamlit.io/alema86/movie_recommandation/main/Streamlit/streamlit_appVersion_finale.py">here</a>.
+            We started to clean then analyze the database using <span class="highlightme">Python</span>, <span class="highlightme">Pandas</span> and <span class="highlightme">Plotly</span> then I built the app with a Python library named <span class="highlightme">Streamlit</span>. Based on the massive IMDb database I trained a <span class="highlightme">KNN Machine Learning model</span> to find movies with similar genres to the one selected. The Streamlit App is available <a href="https://share.streamlit.io/alema86/movie_recommandation/main/Streamlit/streamlit_appVersion_finale.py">here</a>.
         </p>
 
 
