--- a/tableau_project.html
+++ b/tableau_project.html
@@ -112,7 +112,7 @@
 					</div>
 
                     <!--Card 3-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('music_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Determine music track popularity</h4>
                         </div>
@@ -123,7 +123,7 @@
 
 
                     <!--Card 4-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('digitecpharma_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Digitecpharma: dashboards on Metabase</h4>
                         </div>
@@ -135,7 +135,7 @@
 
 
                     <!--Card 5-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('manomano_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>ManoMano: raise customer's engagement</h4>
                         </div>
