--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					</div>
 
                     <!--Card 3-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('music_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Determine music track popularity</h4>
                         </div>
@@ -132,7 +132,7 @@
 
 
                     <!--Card 4-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('digitecpharma_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Digitecpharma: dashboards on Metabase</h4>
                         </div>
@@ -144,7 +144,7 @@
 
 
                     <!--Card 5-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('manomano_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>ManoMano: raise customer's engagement</h4>
                         </div>
