--- a/manomano_project.html
+++ b/manomano_project.html
@@ -65,10 +65,10 @@
         <p><br><br>
             During a <span class="highlightme">3 days hackaton</span>. A competition gathered <span class="highlightme">24 Data teams</span> to analyse a Database given by <a href="https://www.manomano.fr/">ManoMano</a> in order to find customer's pain points while purchasing on the website and make suggestion to improve customer's experience.
             <br><br>
-            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on <span class="highlightme">Tableau Software</span>. The <span class="highlightme">dashboard</span> is available <a href="">here</a>. The excentric art style was part of our story telling.
+            We analyzed the Database with <span class="highlightme">Power BI</span> then I used a <span class="highlightme">Python</span> library called Text2Emotion in order to identify customer's feelings based on their comments. I also used <span class="highlightme">photoshop</span> to design some of the visuals used in our presentation. 
+            We went to the finals where I made an oral presentation of our work to hundreds of alumnis and Data professionals from ManoMano. 
+            Our team finished on the podium at the <span class="highlightme">third place</span>. The final presentation was slightly different but you can find a close exemple of what we achieved by watching my <a href="https://github.com/BerengerQueune/BerengerQueune.github.io/blob/main/README.md">mockup presentation</a>.
         </p>
-
-
     </div>
 
 </div>
