--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					</div>
 
                     <!--Card 6-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('wild_code_school_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Data Analyst training (Python, Pandas...)</h4>
                         </div>
@@ -172,7 +172,7 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                        <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                        <div class = "project" onclick="window.open('future_project.html','mywindow');" style="cursor: pointer;">
                             <div class = "card_title">
                                 <h4>Future project at Jedha Bootcamp</h4>
                             </div>
