--- a/manomano_project.html
+++ b/manomano_project.html
@@ -67,7 +67,9 @@
             <br><br>
             We analyzed the Database with <span class="highlightme">Power BI</span> then I used a <span class="highlightme">Python</span> library called Text2Emotion in order to identify customer's feelings based on their comments. I also used <span class="highlightme">photoshop</span> to design some of the visuals used in our presentation. 
             We went to the finals where I made an oral presentation of our work to hundreds of alumnis and Data professionals from ManoMano. 
-            Our team finished on the podium at the <span class="highlightme">third place</span>. The final presentation was slightly different but you can find a close exemple of what we achieved by watching my <a href="https://github.com/BerengerQueune/BerengerQueune.github.io/blob/main/README.md">mockup presentation</a>.
+            Our team finished on the podium at the <span class="highlightme">third place</span>. The final presentation is available <a href="https://manomano.zoom.us/rec/share/Lr8XlnEe5ylhIkOBrkOcS5ZEfg4fMk2c5DahRI2im3Cz7x1IIlX18MGoNkM4YGMA.Tj8hhcJ1pRO61h0f?utm_campaign=CONTENT&utm_source=linkedin&utm_medium=social&utm_content=manomano-replay">Here</a>. 
+            You need to enter personal information to get access and <span class="highlightme">it starts at 01:25:45</span>.<!-- Or you can find a close exemple of what we achieved by watching my <a href="https://github.com/BerengerQueune/BerengerQueune.github.io/blob/main/README.md">mockup presentation</a>.-->
+            I am the one talking.
         </p>
     </div>
 
@@ -144,7 +146,7 @@
 					</div>
 
                     <!--Card 6-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('wild_code_school_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Data Analyst training (Python, Pandas...)</h4>
                         </div>
@@ -162,7 +164,7 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                        <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                        <div class = "project" onclick="window.open('future_project.html','mywindow');" style="cursor: pointer;">
                             <div class = "card_title">
                                 <h4>Future project at Jedha Bootcamp</h4>
                             </div>
