--- a/music_project.html
+++ b/music_project.html
@@ -148,7 +148,7 @@
 					</div>
 
                     <!--Card 6-->
-                    <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('wild_code_school_project.html','mywindow');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Data Analyst training (Python, Pandas...)</h4>
                         </div>
@@ -166,7 +166,7 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                        <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                        <div class = "project" onclick="window.open('future_project.html','mywindow');" style="cursor: pointer;">
                             <div class = "card_title">
                                 <h4>Future project at Jedha Bootcamp</h4>
                             </div>
