--- a/wild_code_school_project.html
+++ b/wild_code_school_project.html
@@ -59,14 +59,19 @@
 
 <div class="project_area">
 
-	<h1>Mockup project: Dashboard on Tableau from SQL Query</h1>
+	<h1>Courses received at Wild Code School</h1>
     <div class="box">
 
         <p><br><br>
-            This was my first Data project. I did it a week after the beginning of my <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time">Data Analyst Training</a>.
-            The Wild Code School gave me access to a <span class="highlightme">SQL</span> database called "Toys and Models". I used MySQL Workbench to write <a href="https://gist.github.com/BerengerQueune/cfa7b160ea88d72179560647fe60be42">4 SQL queries</a>.
-            <br><br>
-            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on <span class="highlightme">Tableau Software</span>. The <span class="highlightme">dashboard</span> is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir">here</a>. The excentric art style was part of our story telling.
+            I studied many topics during this <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time">Data Analyst Training</a>:<br><br>         
+            - Python and libraries such as Numpy, Pandas, Streamlit<br>
+            - Matplotlib, Seaborn, Plotly<br>
+            - SQL, MongoDB<br>
+            - JSON<br>
+            - Tableau, Power BI, Metabase, Dataiku<br>
+            - Machine Learning with Sickit-learn<br><br>
+            
+            I also followed many Live coding sessions, masterclasses and coding dojo. You can find most of the theorical work I have done on these topics on my <span class="highlightme">Github repository</span> <a href="https://github.com/BerengerQueune/Wild_Code_School">here</a>.
         </p>
 
 
