--- a/future_project.html
+++ b/future_project.html
@@ -63,9 +63,9 @@
     <div class="box">
 
         <p><br><br>
-            Wait and see
+            PLACEHOLDER for later
             <br><br>
-            Wait and see
+            PLACEHOLDER for later
         </p>
 
 
