--- a/manomano_project.html
+++ b/manomano_project.html
@@ -70,6 +70,9 @@
             Our team finished on the podium at the <span class="highlightme">third place</span>. The final presentation is available <a href="https://manomano.zoom.us/rec/share/Lr8XlnEe5ylhIkOBrkOcS5ZEfg4fMk2c5DahRI2im3Cz7x1IIlX18MGoNkM4YGMA.Tj8hhcJ1pRO61h0f?utm_campaign=CONTENT&utm_source=linkedin&utm_medium=social&utm_content=manomano-replay">Here</a>. 
             You need to enter personal information to get access and <span class="highlightme">it starts at 01:25:45</span>.<!-- Or you can find a close exemple of what we achieved by watching my <a href="https://github.com/BerengerQueune/BerengerQueune.github.io/blob/main/README.md">mockup presentation</a>.-->
             I am the one talking.
+            ManoMano wrote an <a href="https://medium.com/manomano-tech/what-did-we-learn-from-our-first-student-hackathon-experience-ba237d997df2">article</a> on this topic 
+            
+            
         </p>
     </div>
 
