--- a/index.html
+++ b/index.html
@@ -143,27 +143,30 @@
 
 
 
+				</div>
+
+                <div class="projects">
                     <!--Card 5-->
                     <div class = "project" onclick="window.open('manomano_project.html','mywindow');" style="cursor: pointer;">
-						<div class = "card_title">
+                        <div class = "card_title">
                             <h4>ManoMano: raise customer's engagement</h4>
                         </div>
                         <div class = "card_description">
                         <p>Using Python, Pandas and the Text2Emotion Python Library, we identified customers feeling and made suggestions to improve customer's engagement.</p>
                         </div>
-					</div>
+                    </div>
 
                     <!--Card 6-->
                     <div class = "project" onclick="window.open('wild_code_school_project.html','mywindow');" style="cursor: pointer;">
-						<div class = "card_title">
+                        <div class = "card_title">
                             <h4>Data Analyst training (Python, Pandas...)</h4>
                         </div>
                         <div class = "card_description">
                         <p>Dozens of lessons provided by the Wild Code School.</p>
                         </div>
-					</div>
-				</div>
-
+                    </div>
+                    
+                </div>
 
                 <h2>Jedha Bootcamp: 5 months Data Engineer training</h2>
                 <p class="dates">February 2022 to July 2022</p>
