--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 <img src="images/github_logo.png" alt="Github Profile" />
             </a></li>
             <li><a href="#about_me">About me</a></li>
-            <li><a href="#my_projects">Projects</a></li>
-            <li>Resume</li>
+            <li><a href="#my_projects">Portfolio</a></li>
             
         </ul>
     </nav>
