--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <p id="about_me"></p>
 	<h1>Hi, I'm Bérenger</h1>
     <div class="box">
-        <img src="images/berenger.png" alt="profile photo" />
+        <img src="images/current_best.png" alt="profile photo" />
 
         <p><br><br>
             I am a student Data Analyst currently learning 
