--- a/digitecpharma_project.html
+++ b/digitecpharma_project.html
@@ -70,7 +70,7 @@
             This project had a 2 months lifespan including multiple meetings with a lot of back and forth to gather feedbacks and share ideas with Digitecpharma.
             I focused my work on the technical side by learning Metabase and doing SQL queries as well as gathering feedback from the customer. 
             This project was highly collaborative, both within our team and with Digitecpharma.
-            We presented our work during a demoday at the Wild Code School and you can find it here PLACEHOLDER PLACEHOLDER PLACEHOLDER.
+            We presented our work during a demoday at the Wild Code School and you can find it <a href="https://www.loom.com/share/836105de6a9843e593a6f6fd3d4915bd">here</a>.
         </p>
 
 
