--- a/wild_code_school_project.html
+++ b/wild_code_school_project.html
@@ -71,7 +71,11 @@
             - Tableau, Power BI, Metabase, Dataiku<br>
             - Machine Learning with Sickit-learn<br><br>
             
-            I also followed many Live coding sessions, masterclasses and coding dojo. You can find most of the theorical work I have done on these topics on my <span class="highlightme">Github repository</span> <a href="https://github.com/BerengerQueune/Wild_Code_School">here</a>.
+            I also followed many Live coding sessions, masterclasses and coding dojo. 
+            You can find most of the theorical work I have done 
+            on my <span class="highlightme">Github repository</span> <a href="https://github.com/BerengerQueune/Wild_Code_School">here</a> 
+            and my school certificate  <a href="https://drive.google.com/file/d/1GhWx-oAKANAbk_Mpwz0BsruyjcctO4M1/view">here</a>.
+            
         </p>
 
 
