--- a/music_project.html
+++ b/music_project.html
@@ -63,7 +63,7 @@
     <div class="box">
 
         <p><br><br>
-            During a <span class="highlightme">2 days hackaton</span> with a team of 5 we had to developp a <span class="highlightme">webapp</span> useful for professionals of the music industry. We were free to find our own concept as long as we were using the <span class="highlightme">Spotify</span> Database. 
+            During a <span class="highlightme">2 days hackaton</span> with a team of 5 we had to developp a <span class="highlightme">webapp</span> useful for professionals of the music industry. We were free to find our own concept as long as we were using the Spotify Database. 
             <br><br>
             After a team brainstorming we picked my concept of modifying music metrics such as danceability, genre, liveness and many others then use Machine Learning to determine if the track will be popular so music productors could use and experiment with our app to shape their own popular music.
             My work consisted of using <span class="highlightme">Python</span> to build the Machine Learning Model and after many trials, I found the <span class="highlightme">RandomForest Classifier</span> model to be the most efficient. 
