--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
         <img src="images/current_best.png" alt="profile photo" />
 
         <p><br><br>
-            I am a student Data Analyst currently learning 
-            at the Wild Code School.
+            I am a Data Analyst.
             <br><br>
-            I will start a 5 months Data Engineer training at Jedha Bootcamp in February.
+            I will start a 5 months Data Engineer training at Jedha Bootcamp in March.
         </p>
 
 
