--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 <!--Navigation Bar-->
 <!--Navigation Bar-->
 
-	
+
     <nav>
+        <img src="images/cloud_nav_bar.png"/>
+        <div class="nav_container">
         <div class="profile">
             <h1><a href="index.html">Home</a></h1>
         </div>
@@ -40,6 +42,7 @@
             <li><a href="#my_projects">Portfolio</a></li>
             
         </ul>
+    </div>
     </nav>
 
 <!--Navigation Bar-->
