--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
 <!--Navigation Bar-->
 <!--Navigation Bar-->
 
-
+	
     <nav>
-        <img src="images/cloud_nav_bar.png"/>
-        <div class="nav_container">
         <div class="profile">
             <h1><a href="index.html">Home</a></h1>
         </div>
@@ -42,7 +40,6 @@
             <li><a href="#my_projects">Portfolio</a></li>
             
         </ul>
-    </div>
     </nav>
 
 <!--Navigation Bar-->
@@ -66,9 +63,10 @@
         <img src="images/current_best.png" alt="profile photo" />
 
         <p><br><br>
-            I am a Data Analyst.
+            I am a student Data Analyst currently learning 
+            at the Wild Code School.
             <br><br>
-            I will start a 5 months Data Engineer training at Jedha Bootcamp in March.
+            I will start a 5 months Data Engineer training at Jedha Bootcamp in February.
         </p>
 
 
