--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 <!--Navigation Bar-->
 <!--Navigation Bar-->
 
-	
+
     <nav>
+        <img src="images/cloud_nav_bar.png"/>
+
         <div class="profile">
             <h1><a href="index.html">Home</a></h1>
         </div>
@@ -40,6 +42,7 @@
             <li><a href="#my_projects">Portfolio</a></li>
             
         </ul>
+
     </nav>
 
 <!--Navigation Bar-->
@@ -63,10 +66,9 @@
         <img src="images/current_best.png" alt="profile photo" />
 
         <p><br><br>
-            I am a student Data Analyst currently learning 
-            at the Wild Code School.
+            I am a Data Analyst.
             <br><br>
-            I will start a 5 months Data Engineer training at Jedha Bootcamp in February.
+            I will start a 5 months Data Engineer training at Jedha Bootcamp in March.
         </p>
 
 
