--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <nav>
         <img src="images/cloud_nav_bar.png"/>
-
+        <div class="nav_container">
         <div class="profile">
             <h1><a href="index.html">Home</a></h1>
         </div>
@@ -42,7 +42,7 @@
             <li><a href="#my_projects">Portfolio</a></li>
             
         </ul>
-
+    </div>
     </nav>
 
 <!--Navigation Bar-->
