--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-
+<!DOCTYPE html>
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
@@ -75,6 +74,7 @@
     </div>
 
 </div>
+
 
 <!--Presentation div-->
 <!--Presentation div-->
@@ -201,5 +201,5 @@
 
         </footer>
 	</body>
-
+</html>
     
