--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: anin
+title: Portfolio
 ---
 
 <!DOCTYPE html>
@@ -28,26 +28,7 @@ title: anin
 <!--Navigation Bar-->
 
 
-    <nav>
-        <img src="images/cloud_nav_bar.png"/>
-        <div class="nav_container">
-        <div class="profile">
-            <h1><a href="index.html">Home</a></h1>
-        </div>
-
-        <ul>
-            <li><a href="https://www.linkedin.com/in/b%C3%A9renger-queune/">
-                <img src="images/LinkedIn_logo_initials.png" alt="Linkedin Profile" />
-            </a></li>
-            <li><a href="https://github.com/BerengerQueune">
-                <img src="images/github_logo.png" alt="Github Profile" />
-            </a></li>
-            <li><a href="#about_me">About me</a></li>
-            <li><a href="#my_projects">Portfolio</a></li>
-            
-        </ul>
-    </div>
-    </nav>
+{% include test.html %}
 
 <!--Navigation Bar-->
 <!--Navigation Bar-->
@@ -81,7 +62,7 @@ title: anin
 </div>
 <p>HIIIIIIIIIIIIIIII</p>
 
-{% include test.html %}
+
 
 
 <!--Presentation div-->
