--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Portfolio
 <!--Navigation Bar-->
 
 
-{% include test.html %}
+{% include nav_bar.html %}
 
 <!--Navigation Bar-->
 <!--Navigation Bar-->
