--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
----
----
+
 
 <!DOCTYPE html>
 <html lang="fr">
@@ -59,7 +58,7 @@
 <!--Presentation div-->
 <!--Presentation div-->
 
-<p>HAAAAAAAAOOO</p>
+<p>HIIIIIIII</p>
 
 <!--Project area div-->
 <!--Project area div-->
