--- a/wild_code_school_project.html
+++ b/wild_code_school_project.html
@@ -37,7 +37,7 @@
     <div class="box">
 
         <p><br><br>
-            I studied many topics during this <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time">Data Analyst Training</a>:<br><br>         
+            I studied the following topics during this <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time">Data Analyst Training</a>:<br><br>         
             - Python and libraries such as Numpy, Pandas, Streamlit<br>
             - Matplotlib, Seaborn, Plotly<br>
             - SQL, MongoDB<br>
