--- a/music_project.html
+++ b/music_project.html
@@ -52,112 +52,7 @@
 </div>
 
 <!--Project area div-->
-<!--Project area div-->
-<!--Project area div-->
-<!--Project area div-->
-<!--Project area div-->
-<p id="my_projects"></p>
-		<section class="page-content">
-
-            
-			<section class="projects-section">
-                
-				<h1>Projects</h1>
-                <h2>Wild Code School: 5 months Data Analyst training</h2>
-                <p class="dates">September 2021 to February 2022</p>
-				<div class="projects">
-
-					<!--Card 1-->
-                        <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
-                            <div class = "card_title">
-                                <h4>Mockup project: Dashboard on Tableau from SQL Query</h4>
-                            </div>
-                            <div class = "card_description">
-                                <p>This was my first data project. I used SQL to query data from a "Toys and models" 
-                                    database to realize a dashboard with Tableau software.</p>
-                            </div>
-					</div>
-
-                    <!--Card 2-->
-					<div class = "project" onclick="window.open('movie_recommendation_project.html','mywindow');" style="cursor: pointer;">
-						<div class = "card_title">
-                            <h4>Movie recommendation system</h4>
-                        </div>
-                        <div class = "card_description">
-                        <p>With the IMDb database, I used Python and Pandas to clear the database. Then Sickit-learn for Machine Learning. I developped a webapp with the Streamlit Python Library to display the recommendations.</p>
-                        </div>
-					</div>
-
-                    <!--Card 3-->
-                    <div class = "project" onclick="window.open('music_project.html','mywindow');" style="cursor: pointer;">
-						<div class = "card_title">
-                            <h4>Determine music track popularity</h4>
-                        </div>
-                        <div class = "card_description">
-                        <p>With the Spotify database, Python, Pandas, Sickit-learn I made a webapp on streamlit where people can tweak a music track characteristics to find out the influence on potential popularity.</p>
-                        </div>
-					</div>
-
-
-                    <!--Card 4-->
-                    <div class = "project" onclick="window.open('digitecpharma_project.html','mywindow');" style="cursor: pointer;">
-						<div class = "card_title">
-                            <h4>Digitecpharma: dashboards on Metabase</h4>
-                        </div>
-                        <div class = "card_description">
-                        <p>From a PostgreSQL Database, I use SQL querys to display multiple dashboards on Metabase.</p>
-                        </div>
-					</div>
-
-
-
-                    <!--Card 5-->
-                    <div class = "project" onclick="window.open('manomano_project.html','mywindow');" style="cursor: pointer;">
-						<div class = "card_title">
-                            <h4>ManoMano: raise customer's engagement</h4>
-                        </div>
-                        <div class = "card_description">
-                        <p>Using Python, Pandas and the Text2Emotion Python Library, we identified customers feeling and made suggestions to improve customer's engagement.</p>
-                        </div>
-					</div>
-
-                    <!--Card 6-->
-                    <div class = "project" onclick="window.open('wild_code_school_project.html','mywindow');" style="cursor: pointer;">
-						<div class = "card_title">
-                            <h4>Data Analyst training (Python, Pandas...)</h4>
-                        </div>
-                        <div class = "card_description">
-                        <p>Dozens of lessons provided by the Wild Code School.</p>
-                        </div>
-					</div>
-				</div>
-
-
-                <h2>Jedha Bootcamp: 5 months Data Engineer training</h2>
-                <p class="dates">February 2022 to July 2022</p>
-
-
-				<div class="projects">
-
-					<!--Card 1-->
-                        <div class = "project" onclick="window.open('future_project.html','mywindow');" style="cursor: pointer;">
-                            <div class = "card_title">
-                                <h4>Future project at Jedha Bootcamp</h4>
-                            </div>
-                            <div class = "card_description">
-                                <p>Wait and See. Wait and See. Wait and See.</p>
-                            </div>
-					</div>
-
-
-
-				</div>
-			</section>
-		</section>
-<!--Project area div-->
-<!--Project area div-->
-<!--Project area div-->
-<!--Project area div-->
+{% include projects_area.html %}
 <!--Project area div-->
 
 
