--- a/testing.html
+++ b/testing.html
@@ -15,8 +15,10 @@
 
 <body>
 
-		
-
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
 <!--Navigation Bar-->
 <nav>
     <img src="images/cloud_nav_bar.png"/>
@@ -38,6 +40,10 @@
     </ul>
 </div>
 </nav>
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
+<!--Navigation Bar-->
 <!--Navigation Bar-->
 
 
